--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,9 @@ add_executable(nori
   src/simple.cpp
   src/area.cpp
   src/whitted.cpp
+  src/path_mats.cpp
+  src/path_ems.cpp
+  src/path_mis.cpp
 )
 
 add_definitions(${NANOGUI_EXTRA_DEFS})
